<resources>
    <string name="app_name">Brisky Bake</string>
    <string name="applogo">AppLogo</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_signin_here"><u>Already have an account? Sign in here</u></string>
    <string name="log_in">LOG IN</string>
    <string name="not_registered_sign_up_here"><u>Not registered? Sign up here</u></string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cartfab">Cartfab</string>
    <string name="name_of_menu">Name of Menu</string>
    <string name="open">Open navigation drawer</string>
    <string name="name_of_item">Name of Item</string>
    <string name="food_pic">Food pic</string>
    <string name="food_name">Food Name</string>
    <string name="_100">100</string>
    <string name="rupee">rupee</string>
    <string name="description">Description</string>
    <string name="forget_password">Forget Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="search_title">Search</string>
    <string name="logout">Logout</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="remember_me">Remember Me</string>
    <string name="phone_number">Phone number:</string>
    <string name="emailanother">Email:</string>
    <string name="nameanother">Name:</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="ApiKey">AIzaSyC6uH40vNo_-g6Qkm1U9HERf3N9Mm2twkc</string>

</resources>