<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/menuicon"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/carticon"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ordersicon"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>