<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/buttoncolor">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/outline"
        android:backgroundTint="@color/backgroundcolor"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/appiconsignup"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/bblogo"
            android:contentDescription="@string/applogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <EditText
                android:id="@+id/TextNamesignup"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/tbicon_name"
                android:drawableLeft="@drawable/tbicon_name"
                android:ems="10"
                android:hint="@string/name"
                android:fontFamily="@font/poppins_light"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:textSize="15sp"
                tools:ignore="Autofill,RtlSymmetry"
                android:paddingStart="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <EditText
                android:id="@+id/TextEmailsignup"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/tbicon_email"
                android:drawableLeft="@drawable/tbicon_email"
                android:ems="10"
                android:hint="@string/email"
                android:fontFamily="@font/poppins_light"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                tools:ignore="Autofill,RtlSymmetry"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <EditText
                android:id="@+id/TextPhonesignup"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/tbicon_phone"
                android:drawableLeft="@drawable/tbicon_phone"
                android:ems="10"
                android:hint="@string/phone"
                android:fontFamily="@font/poppins_light"
                android:inputType="phone"
                android:paddingLeft="5dp"
                android:textSize="15sp"
                tools:ignore="Autofill,RtlSymmetry"
                android:paddingStart="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <EditText
                android:id="@+id/TextPasswordsignup"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/tbiconpassword"
                android:drawableLeft="@drawable/tbiconpassword"
                android:ems="10"
                android:hint="@string/password"
                android:fontFamily="@font/poppins_light"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:textSize="15sp"
                tools:ignore="Autofill,Deprecated,RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btncorners"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up"
            android:fontFamily="@font/poppins_light"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:backgroundTint="@color/buttoncolor" />

    </LinearLayout>

    <Button
        android:id="@+id/directtosignin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_signin_here"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/backgroundcolor"
        android:textColor="@color/white"
        android:textSize="12sp"
        />

</LinearLayout>