<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    android:background="@color/buttoncolor"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        android:background="@drawable/outline"
        android:backgroundTint="@color/backgroundcolor"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/appiconsignin"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/bblogo"
            android:contentDescription="@string/applogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/TextEmailFP"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="@string/email"
                android:drawableStart="@drawable/tbicon_email"
                android:drawableLeft="@drawable/tbicon_email"
                android:ems="10"
                android:hint="@string/email"
                android:fontFamily="@font/poppins_light"
                android:inputType="textEmailAddress"
                android:paddingTop="10dp"
                android:textSize="15sp"
                 />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnforgetpassword"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btncorners"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_light"
            app:backgroundTint="@color/buttoncolor" />


    </LinearLayout>

</LinearLayout>