<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetail">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.BriskyBake.NoActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/backgroundcolor"
            app:expandedTitleTextAppearance="@style/Theme.BriskyBake.NoActionBar">

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:title=""
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Theme.AppCompat.Light"
                app:layout_collapseMode="parallax">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.andremion.counterfab.CounterFab
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/food_pic"
        android:src="@drawable/carticon"
        app:elevation="6dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp"
        tools:ignore="UnusedAttribute"
        app:useCompatPadding="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/food_pic"
        android:src="@drawable/ic_baseline_star_24"
        app:elevation="6dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|start"
        app:pressedTranslationZ="12dp"
        tools:ignore="UnusedAttribute"
        app:useCompatPadding="true"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundcolor"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundcolor"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/food_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="9"
                        android:fontFamily="@font/poppins_light"
                        android:padding="12dp"
                        android:text="@string/_100"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                        android:id="@+id/number_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="18dp"
                        android:baselineAligned="false"
                        app:backGroundColor="@color/buttoncolor"
                        app:finalNumber="50"
                        app:initialNumber="1"
                        app:textSize="8sp"
                        tools:ignore="SmallSp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardElevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

               <LinearLayout
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/backgroundcolor">

                   <RatingBar
                       android:id="@+id/ratingBar"
                       android:rating="0"
                       android:max="5"
                       android:isIndicator="true"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>

                   <TextView
                       android:id="@+id/food_description"
                       android:layout_marginTop="12dp"
                       android:lineSpacingMultiplier="1.5"
                       android:padding="12dp"
                       android:text="@string/description"
                       android:fontFamily="@font/poppins_light"
                       android:textColor="@color/black"
                       android:textSize="18sp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>

               </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>